# hw3-ShanaKim

./: .gitignore  Makefile  README.md  ai_documentation.txt  index.md  myst.yml
ligotools/: pyproject.toml  utils.py
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/tests/: test_readligo.py  test_utils.py
